# resume-reviewer

./: .gitignore  README.md  project.md  pyproject.toml  resume_reviewer.py  skills.csv  skills.txt
.github/workflows/: mint-release.yml  release.yml
